20-nodejs-postgresql-persistent/40-route-nodejs-postgresql-persistent.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: nodejs-postgresql-persistent
    template: nodejs-postgresql-persistent
  name: nodejs-postgresql-persistent
  namespace: cluster-validation-nodejs
spec:
  host: ""
  to:
    kind: Service
    name: nodejs-postgresql-persistent
